Заготовка для табов

--- a/tabs.html
+++ b/tabs.html
@@ -19,7 +19,10 @@
 
             <div class="row">
                 <div class="col-4">
-                    <img src="" alt="" class="place-img">
+                    <img src="images/ladoga.jpg" alt="Старая Ладога" class="place-img place-img--visible">
+                    <img src="images/ruskeala.jpg" alt="Парк Рускеала" class="place-img">
+                    <img src="images/losevo.jpeg" alt="Пороги в Лосево" class="place-img">
+                    <img src="images/zubr.jpg" alt="Зубробизоны в Токсово" class="place-img">
                 </div>
                 <div class="col-8">
                     <div class="place-desc place-desc--visible">
@@ -27,65 +30,77 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, architecto blanditiis hic
                             nostrum obcaecati placeat.</p>
                         <ul class="place-links">
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">Старая Ладога</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
                         </ul>
                     </div>
-                    <div class="place-desc place-desc--visible">
-                        <h2>Старая Ладога</h2>
+                    <div class="place-desc">
+                        <h2>Парк Рускеала</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, architecto blanditiis hic
                             nostrum obcaecati placeat.</p>
                         <ul class="place-links">
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">Парк Рускеала</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
                         </ul>
                     </div>
-                    <div class="place-desc place-desc--visible">
-                        <h2>Старая Ладога</h2>
+                    <div class="place-desc">
+                        <h2>Пороги в Лосево</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, architecto blanditiis hic
                             nostrum obcaecati placeat.</p>
                         <ul class="place-links">
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">Пороги в Лосево</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
                         </ul>
                     </div>
-                    <div class="place-desc place-desc--visible">
-                        <h2>Старая Ладога</h2>
+                    <div class="place-desc">
+                        <h2>Зубробизоны в Токсово</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, architecto blanditiis hic
                             nostrum obcaecati placeat.</p>
                         <ul class="place-links">
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
-                            <li class="place-links__item"><a href="" class="place-links__link"></a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">Зубробизоны в Токсово</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
+                            <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
                         </ul>
                     </div>
 
                     <div class="row">
                         <div class="col-3">
-                            <a href="#" class="place-tab">
-                                <img src="" alt="" class="place-tab__img">
+                            <a href="#" class="place-tab place-tab--active">
+                                <div class="place-tab__inner">
+                                    <img src="images/ladoga.jpg" alt="" class="place-tab__img">
+                                </div>
+                                <span class="place-tab__desc">Старая Ладога</span>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#" class="place-tab">
-                                <img src="" alt="" class="place-tab__img">
+                                <div class="place-tab__inner">
+                                    <img src="images/ruskeala.jpg" alt="" class="place-tab__img">
+                                </div>
+                                <span class="place-tab__desc">Парк Рускеала</span>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#" class="place-tab">
-                                <img src="" alt="" class="place-tab__img">
+                                <div class="place-tab__inner">
+                                    <img src="images/losevo.jpeg" alt="" class="place-tab__img">
+                                </div>
+                                <span class="place-tab__desc">Лосево</span>
                             </a>
                         </div>
                         <div class="col-3">
                             <a href="#" class="place-tab">
-                                <img src="" alt="" class="place-tab__img">
+                                <div class="place-tab__inner">
+                                    <img src="images/zubr.jpg" alt="" class="place-tab__img">
+                                </div>
+                                <span class="place-tab__desc">Зубробизоны в Токсово</span>
                             </a>
                         </div>
                     </div>
