--- a/tabs.html
+++ b/tabs.html
@@ -39,7 +39,7 @@
                     <div class="place-desc">
                         <h2>Парк Рускеала</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, architecto blanditiis hic
-                            nostrum obcaecati placeat.</p>
+                            nostrum obcaecati placeat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, provident?</p>
                         <ul class="place-links">
                             <li class="place-links__item"><a href="#" class="place-links__link">Парк Рускеала</a></li>
                             <li class="place-links__item"><a href="#" class="place-links__link">link</a></li>
@@ -108,5 +108,10 @@
             </div>
         </div>
     </section>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
